Added landing page

--- a/AngularApp/src/app/components/navbar/navbar.component.html
+++ b/AngularApp/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
         </li>
       </ul>
       <div>
-        <a class="btn btn-primary m-1 navbar-link" href="#">Pogledaj korpu</a>
+        <a class="btn btn-info m-1 navbar-link" href="#">Pogledaj korpu</a>
       </div>
     </div>
   </div>
