--- a/AngularApp/src/app/components/navbar/navbar.component.html
+++ b/AngularApp/src/app/components/navbar/navbar.component.html
@@ -1,23 +1,23 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary p-3">
   <div class="container-fluid">
-    <a class="navbar-brand px-5" href="#">BaseCure</a>
+    <a class="navbar-brand px-5" routerLink="/">BaseCure</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="btn btn-light m-1 navbar-link" href="#">Apoteke</a>
+          <a class="btn btn-light m-1 navbar-link" routerLink="/apoteke">Apoteke</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-light m-1 navbar-link" href="#">Bolnice i ambulante</a>
+          <a class="btn btn-light m-1 navbar-link" routerLink="/bolnice-ambulante">Bolnice i ambulante</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-light m-1 navbar-link" href="#">Poliklinike i oridnacije</a>
+          <a class="btn btn-light m-1 navbar-link" routerLink="/poliklinike-oridnacije">Poliklinike i oridnacije</a>
         </li>
       </ul>
       <div>
-        <a class="btn btn-info m-1 navbar-link" href="#">Pogledaj korpu</a>
+        <a class="btn btn-info m-1 navbar-link" routerLink="/korpa">Pogledaj korpu</a>
       </div>
     </div>
   </div>
