--- a/AngularApp/src/app/pages/cart/cart.component.html
+++ b/AngularApp/src/app/pages/cart/cart.component.html
@@ -1,1 +1,67 @@
-<p>cart works!</p>
+<div class="container">
+  <div class="my-4 main">
+    <div class="items">
+      <h4>Vaša korpa</h4>
+      <p>Trenutno imate X lijekova za poručiti</p>
+      <hr>
+      <div class="card mb-3" *ngFor="let i of [0,1,2,3,4,5]">
+        <div class="card-body">
+          <div class="details-text">
+            <div class="details-text align-items-center">
+              <div>
+                <button class="btn btn-sm"><i class="bi bi-trash fs-5"></i></button>
+              </div>
+              <div class="ms-3">
+                <h5>Naziv Lijeka</h5>
+                <p class="small mb-0">Opis Lijeka</p>
+              </div>
+            </div>
+            <div class="details-text align-items-center">
+              <div>
+                <h5 class="mb-0 me-3">10KM</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="details card bg-primary text-white mt-4 "> 
+      <form>
+        <div class="card-body">
+          <h5 class="mb-0">Detalji narudžbe</h5>
+          <hr>
+          <div class="form-group mb-2">
+            <label>Ime i prezime:</label>
+            <input type="text" class="form-control">
+          </div>
+          <div class="form-group mb-2">
+            <label>Telefonski broj:</label>
+            <input type="text" class="form-control">
+          </div>
+          <div class="form-group mb-2">
+            <label>Grad:</label>
+            <input type="text" class="form-control">
+          </div>
+          <div class="form-group mb-2">
+            <label>Adresa stanovanja:</label>
+            <input type="text" class="form-control">
+          </div>
+          <hr>
+          <div class="details-text">
+            <p class="mb-2">Ukupna cijena lijekova:</p>
+            <p class="mb-2">10KM</p>
+          </div>
+          <div class="details-text">
+            <p class="mb-2">Dostava:</p>
+            <p class="mb-2">2KM</p>
+          </div>
+          <div class="details-text">
+            <p class="mb-2">Ukupno cijena lijekova i dostave:</p>
+            <p class="mb-2">12KM</p>
+          </div>
+          <button class="btn btn-info btn-lg btn-block mt-2">Potvrdi narudžbu</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
