--- a/AngularApp/src/app/pages/about/about.component.html
+++ b/AngularApp/src/app/pages/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <div class="thumbnail-details mt-4">
-        <img class="thumbnail rounded mx-4" src="./../../../assets/img/landing-page-background.jpg" alt="Slika">
-        <div class="details mx-4">
+    <div class="mt-4 row d-flex flex-row justify-content-around">
+        <img class="thumbnail rounded shadow mx-4 col-8" src="./../../../assets/img/no-image-avabliable.jpg" alt="Slika">
+        <div class="mx-4 mt-2 col">
             <h2>Naziv zdravstvene institucije</h2>
             <h6>Some quick example text to build on the card title and make up the bulk of the card's content.</h6>
             <p class="mt-4">Grad: test</p>
