--- a/AngularApp/src/app/components/filter/filter.component.html
+++ b/AngularApp/src/app/components/filter/filter.component.html
@@ -1,6 +1,6 @@
 <div class="container my-4">
-    <input type="text" class="form-control" placeholder="Naziv zdravstvene institucije">
-    <input type="text" class="form-control" placeholder="Naziv grada">
+    <input type="text" class="form-control" placeholder="{{input_text1}}">
+    <input type="text" class="form-control" placeholder="{{input_text2}}">
     <button class="btn btn-info btn-filter mt-2">Nastavi</button>
     <hr>
 </div>
