--- a/AngularApp/src/app/pages/about/about.component.css
+++ b/AngularApp/src/app/pages/about/about.component.css
@@ -1,25 +1,11 @@
-.thumbnail-details {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
 .thumbnail {
     width: 600px;
     aspect-ratio: 16/9;
-    border: 1px solid #d2d2d2;
-    margin-top: auto;
-    margin-bottom: auto;
+    padding: 0;
 }
 
 @media(max-width: 991px){
-    .thumbnail-details {
-        flex-direction: column;
-        align-items: center;
-    }
     .thumbnail {
         width: 95%;
-    }
-    .details {
-        margin-top: 20px;
     }
 }
