--- a/AngularApp/src/app/pages/landing/landing.component.html
+++ b/AngularApp/src/app/pages/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div class="login">
+<div class="login shadow-sm">
     <form #loginForm="ngForm" (submit)="sendLoginPostRequest(loginForm.value)">
         <h3 class="text-center mt-2">Prijavi se</h3>
         <div class="form-group mt-2">
@@ -10,9 +10,9 @@
             <input type="password" class="form-control" name="password" ngModel>
         </div>
         <div class="form-group form-check mt-2">
-            <input type="checkbox" id="checkbox-input" class="form-check-input checkbox-input" name="rememberme" ngModel>
-            <label class="form-check-label checkbox-input" for="checkbox-input">Zapamti me</label>
+            <input type="checkbox" id="checkbox-input" class="form-check-input" name="rememberme" ngModel>
+            <label for="checkbox-input">Zapamti me</label>
         </div>
-        <button class="form-group btn btn-info btn-block mt-3">Nastavi</button>
+        <button class="btn btn-info btn-block mt-3">Nastavi</button>
     </form>
 </div>
