--- a/AngularApp/src/styles.css
+++ b/AngularApp/src/styles.css
@@ -1,3 +1,15 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+.shadow, .shadow-sm, .shadow-lg {
+    border: none;
+}
+.btn-info {
+    box-shadow: 0 .125rem .25rem rgba(0,0,0,.075) !important;
+}
+.btn, .login, .form-control, .form-check-input, .card, .card-img-top, .card-body {
+    border-radius: 3px;
+}
+.btn-block {
+    width: 100%;
+}
