--- a/AngularApp/src/app/components/navbar/navbar.component.html
+++ b/AngularApp/src/app/components/navbar/navbar.component.html
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="btn navbar-link" routerLink="/apoteke">Apoteke</a>
+          <a class="btn navbar-link" routerLink="/apoteke" routerLinkActive="active-link">Apoteke</a>
         </li>
         <li class="nav-item">
-          <a class="btn navbar-link" routerLink="/bolnice-ambulante">Bolnice i ambulante</a>
+          <a class="btn navbar-link" routerLink="/bolnice-ambulante" routerLinkActive="active-link">Bolnice i ambulante</a>
         </li>
         <li class="nav-item">
-          <a class="btn navbar-link" routerLink="/poliklinike-ordinacije">Poliklinike i oridnacije</a>
+          <a class="btn navbar-link" routerLink="/poliklinike-ordinacije" routerLinkActive="active-link">Poliklinike i oridnacije</a>
         </li>
         <li class="nav-item mx-3">
           <a class="btn btn-info navbar-link" routerLink="/korpa">Pogledaj korpu</a>
