--- a/AngularApp/src/styles.css
+++ b/AngularApp/src/styles.css
@@ -10,6 +10,9 @@ body {
 .btn, .login, .form-control, .form-check-input, .card, .card-img-top, .card-body {
     border-radius: 3px;
 }
+.btn: active {
+    border-color: transparent !important;
+}
 .btn-block {
     width: 100%;
 }
