--- a/AngularApp/src/app/components/navbar/navbar.component.html
+++ b/AngularApp/src/app/components/navbar/navbar.component.html
@@ -6,17 +6,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="btn navbar-link" routerLink="/apoteke" routerLinkActive="active-link">Apoteke</a>
+        <li class="nav-item mx-1">
+          <a class="btn navbar-link" routerLink="/pretrazi" routerLinkActive="active-link">Pretraži apoteke/bolnice</a>
         </li>
+        <li class="nav-item mx-1">
+          <a class="btn navbar-link" routerLink="/korpa" routerLinkActive="active-link">Pogledaj korpu</a>
         <li class="nav-item">
-          <a class="btn navbar-link" routerLink="/bolnice-ambulante" routerLinkActive="active-link">Bolnice i ambulante</a>
-        </li>
+        <li class="nav-item mx-1">
+          <a class="btn navbar-link" routerLink="/korisnik-info" routerLinkActive="active-link">Moje informacije</a>
         <li class="nav-item">
-          <a class="btn navbar-link" routerLink="/poliklinike-ordinacije" routerLinkActive="active-link">Poliklinike i oridnacije</a>
-        </li>
-        <li class="nav-item mx-3">
-          <a class="btn btn-info navbar-link" routerLink="/korpa">Pogledaj korpu</a>
+        <li class="nav-item mx-3" *ngIf="isLogiran()">
+          <button class="btn navbar-link btn-info" (click)="logoutUser()">Odjavi se</button>
         <li class="nav-item">
       </ul>
     </div>
