--- a/AngularApp/src/app/pages/landing/landing.component.html
+++ b/AngularApp/src/app/pages/landing/landing.component.html
@@ -1,13 +1,13 @@
 <div class="login shadow-sm">
-    <form #loginForm="ngForm" (submit)="sendLoginPostRequest(loginForm.value)">
+    <form #loginForm="ngForm" (submit)="loginUser(loginForm.value)">
         <h3 class="text-center mt-2">Prijavi se</h3>
         <div class="form-group mt-2">
-            <label>E-mail:</label>
-            <input type="email" class="form-control" name="email" autocomplete="off" ngModel>
+            <label>Korisničko ime:</label>
+            <input type="email" class="form-control" name="korisnickoIme" autocomplete="off" ngModel>
         </div>
         <div class="form-group mt-2">
             <label>Šifra:</label>
-            <input type="password" class="form-control" name="password" ngModel>
+            <input type="password" class="form-control" name="lozinka" ngModel>
         </div>
         <div class="form-group form-check mt-2">
             <input type="checkbox" id="checkbox-input" class="form-check-input" name="rememberme" ngModel>
