Changed navbar, login, cart, and button design

--- a/AngularApp/src/app/pages/about/about.component.html
+++ b/AngularApp/src/app/pages/about/about.component.html
@@ -8,7 +8,7 @@
             <p>Adresa: test</p>
             <p>Kontakt telefon: test</p>
             <p>E-mail: test</p>
-            <button class="btn btn-info">Funkcionalno dugme</button>
+            <button class="btn btn-primary">Funkcionalno dugme</button>
         </div>
     </div>
     <iframe
