--- a/AngularApp/src/app/pages/cart/cart.component.html
+++ b/AngularApp/src/app/pages/cart/cart.component.html
@@ -25,7 +25,7 @@
         </div>
       </div>
     </div>
-    <div class="card-details card bg-primary text-white mt-4 shadow-lg"> 
+    <div class="card-details card text-white mt-4 shadow-lg"> 
       <form>
         <div class="card-body">
           <h5>Detalji narudžbe</h5>
@@ -59,7 +59,7 @@
             <p class="mb-2">Ukupno cijena lijekova i dostave:</p>
             <p class="mb-2">12KM</p>
           </div>
-          <button class="btn btn-info btn-lg btn-block mt-2">Potvrdi narudžbu</button>
+          <button class="btn btn-primary btn-lg btn-block mt-2">Potvrdi narudžbu</button>
         </div>
       </form>
     </div>
