--- a/AngularApp/src/app/components/card/card.component.html
+++ b/AngularApp/src/app/components/card/card.component.html
@@ -3,6 +3,6 @@
     <div class="card-body shadow-sm">
         <h5 class="card-title">{{title}}</h5>
         <p class="card-text">{{description}}</p>
-        <a class="btn btn-info btn-block" routerLink="{{btn_link}}">{{btn_text}}</a>
+        <a class="btn btn-primary btn-block" routerLink="{{btn_link}}">{{btn_text}}</a>
     </div>
 </div>
