--- a/AngularApp/src/app/components/navbar/navbar.component.css
+++ b/AngularApp/src/app/components/navbar/navbar.component.css
@@ -1,10 +1,11 @@
 .navbar-brand {
     font-size: 27px;
+    font-weight: 500;
 }
 .navbar-link {
     width: 100%;
     margin: 0 3px;
 }
 .active-link {
-    background-color: #e8e9ea;
+    font-weight: 500;
 }
