--- a/AngularApp/src/app/components/navbar/navbar.component.html
+++ b/AngularApp/src/app/components/navbar/navbar.component.html
@@ -5,18 +5,18 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item mx-1">
+      <ul class="navbar-nav ms-auto me-5">
+        <li class="nav-item">
           <a class="btn navbar-link" routerLink="/pretrazi" routerLinkActive="active-link">Pretraži apoteke/bolnice</a>
         </li>
-        <li class="nav-item mx-1">
+        <li class="nav-item">
           <a class="btn navbar-link" routerLink="/korpa" routerLinkActive="active-link">Pogledaj korpu</a>
         <li class="nav-item">
-        <li class="nav-item mx-1">
+        <li class="nav-item">
           <a class="btn navbar-link" routerLink="/korisnik-info" routerLinkActive="active-link">Moje informacije</a>
         <li class="nav-item">
-        <li class="nav-item mx-3" *ngIf="isLogiran()">
-          <button class="btn navbar-link btn-info" (click)="logoutUser()">Odjavi se</button>
+        <li class="nav-item ms-3" *ngIf="isLogiran()">
+          <button class="btn navbar-link btn-primary" (click)="logoutUser()">Odjavi se</button>
         <li class="nav-item">
       </ul>
     </div>
