--- a/AngularApp/src/app/pages/landing/landing.component.css
+++ b/AngularApp/src/app/pages/landing/landing.component.css
@@ -8,12 +8,19 @@
 .login {
     width: 500px;
     height: 330px;
-    background-color: #f8f9fa;
+    background-color: rgba(20, 20, 100, 0.4);
+    color: white;
     padding: 20px;
     position: relative;
     top: 45%;
     left: 75%;
     transform: translate(-75%, -50%);
+}
+.first-input {
+    margin-top: 10px;
+}
+label {
+    font-weight: 500;
 }
 
 @media (max-width: 991px) {
@@ -27,5 +34,8 @@
         top: 30%;
         left: 50%;
         transform: translate(-50%, -30%);
+    }
+    .first-input {
+        margin-top: 15px;
     }
 }
