--- a/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
+++ b/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
@@ -26,7 +26,7 @@
         </div>
       </div>
     </div>
-    <div class="card-details card text-white mt-4 shadow-lg"> 
+    <div class="card-details card text-white bg-secondary mt-4 shadow-lg"> 
       <form>
         <div class="card-body">
           <h5>Detalji narudžbe</h5>
