--- a/AngularApp/src/app/pages/landing-page/landing-page.component.html
+++ b/AngularApp/src/app/pages/landing-page/landing-page.component.html
@@ -1,5 +1,5 @@
 <div class="login shadow">
-    <form #loginForm="ngForm" (submit)="loginUser(loginForm.value)">
+    <form #loginForm="ngForm" (submit)="formSubmit(loginForm.value)">
         <h3 class="text-center mt-2">Prijavi se</h3>
         <div class="form-group first-input">
             <label>Korisničko ime:</label>
