Added functional detail view about medical institucion

--- a/AngularApp/src/app/pages/user/user-search/user-search.component.html
+++ b/AngularApp/src/app/pages/user/user-search/user-search.component.html
@@ -12,6 +12,6 @@
         title="{{i.naziv}}"
         description="{{i.grad}}"
         btn_text="Pogledaj detalje"
-        btn_link="/detalji"
+        btn_link="/pretrazi/{{i.ustanovaId}}"
     ></app-card>
 </div>
