--- a/AngularApp/src/app/pages/user/user-about/user-about.component.html
+++ b/AngularApp/src/app/pages/user/user-about/user-about.component.html
@@ -2,12 +2,12 @@
     <div class="mt-4 row d-flex flex-row justify-content-around">
         <img class="thumbnail rounded shadow mx-4 col-8" src="./../../../assets/img/no-image-avabliable.jpg" alt="Slika">
         <div class="mx-4 mt-2 col">
-            <h2>Naziv zdravstvene institucije</h2>
+            <h2>{{ustanovaZdravstva.naziv}}</h2>
             <h6>Some quick example text to build on the card title and make up the bulk of the card's content.</h6>
-            <p class="mt-4">Grad: test</p>
-            <p>Adresa: test</p>
-            <p>Kontakt telefon: test</p>
-            <p>E-mail: test</p>
+            <p class="mt-4">Grad: {{ustanovaZdravstva.grad}}</p>
+            <p>Adresa: {{ustanovaZdravstva.adresa}}</p>
+            <p>Kontakt telefon: {{ustanovaZdravstva.kontaktBroj}}</p>
+            <p>E-mail: {{ustanovaZdravstva.email}}</p>
             <button class="btn btn-primary">Funkcionalno dugme</button>
         </div>
     </div>
