Added search medicines page

--- a/AngularApp/src/app/components/card/card.component.html
+++ b/AngularApp/src/app/components/card/card.component.html
@@ -3,6 +3,7 @@
     <div class="card-body shadow-sm">
         <h5 class="card-title">{{title}}</h5>
         <p class="card-text">{{description}}</p>
-        <a class="btn btn-primary btn-block" routerLink="{{btn_link}}">{{btn_text}}</a>
+        <a class="btn btn-primary me-1" routerLink="{{btn_link1}}">{{btn_text1}}</a>
+        <a class="btn btn-secondary ms-1" routerLink="{{btn_link2}}">{{btn_text2}}</a>
     </div>
 </div>
