--- a/AngularApp/src/app/pages/medical-institution/medical-institution-carton/medical-institution-carton.component.html
+++ b/AngularApp/src/app/pages/medical-institution/medical-institution-carton/medical-institution-carton.component.html
@@ -23,8 +23,8 @@
                         <td>John Doe</td>
                         <td>2024-01-01</td>
                         <td>
-                            <button class="btn btn-sm btn-primary">Snimi</button>
-                            <button class="btn btn-sm btn-danger">Obrisi</button>
+                            <button class="btn btn-primary">Snimi</button>
+                            <button class="btn btn-danger ms-2">Obrisi</button>
                         </td>
                     </tr>
                     <tr>
@@ -32,8 +32,8 @@
                         <td>Jane Smith</td>
                         <td>2024-02-01</td>
                         <td>
-                            <button class="btn btn-sm btn-primary">Snimi</button>
-                            <button class="btn btn-sm btn-danger">Obrisi</button>
+                            <button class="btn btn-primary">Snimi</button>
+                            <button class="btn btn-danger ms-2">Obrisi</button>
                         </td>
                     </tr>
                     <!-- More records... -->
