--- a/AngularApp/src/app/pages/user/user-search/user-search.component.html
+++ b/AngularApp/src/app/pages/user/user-search/user-search.component.html
@@ -11,7 +11,9 @@
         img="./../../../assets/img/no-image-avabliable.jpg"
         title="{{i.naziv}}"
         description="{{i.grad}}"
-        btn_text="Pogledaj detalje"
-        btn_link="/pretrazi/{{i.ustanovaId}}"
+        btn_text1="Lijekovi"
+        btn_link1="/lijekovi"
+        btn_text2="Detalji"
+        btn_link2="/pretrazi/{{i.ustanovaId}}"
     ></app-card>
 </div>
