--- a/AngularApp/src/app/pages/user/user-about/user-about.component.html
+++ b/AngularApp/src/app/pages/user/user-about/user-about.component.html
@@ -8,7 +8,7 @@
             <p>Adresa: {{res.adresa}}</p>
             <p>Kontakt telefon: {{res.kontaktBroj}}</p>
             <p>E-mail: {{res.email}}</p>
-            <button class="btn btn-primary">Funkcionalno dugme</button>
+            <a class="btn btn-primary" routerLink="/lijekovi">Pretraži lijekove</a>
         </div>
     </div>
     <iframe
