--- a/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
+++ b/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
@@ -4,27 +4,11 @@
       <h4>Vaša korpa</h4>
       <p>Trenutno imate X lijekova za poručiti</p>
       <hr>
-      <div class="card border-0" *ngFor="let i of [0,1,2,3,4]">
-        <div class="card-body">
-          <div class="card-align">
-            <div class="card-column align-items-center">
-              <img src="./../../../assets/img/no-image-avabliable.jpg" class="card-img">
-              <div class="ms-4">
-                <h5>Naziv Lijeka</h5>
-                <p class="small mb-0">Opis lijeka. Opis lijeka. Opis lijeka. Opis lijeka. Opis lijeka. Opis lijeka. Opis lijeka. Opis lijeka.</p>
-              </div>
-            </div>
-            <div class="card-column align-items-center justify-content-end">
-              <div>
-                <h5 class="mb-0 me-3">10KM</h5>
-              </div>
-              <div>
-                <button class="btn btn-primary">Ukloni</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <app-item-list *ngFor="let i of [0,1,2,3,4]"
+        name="Naziv Lijeka"
+        description="Opis Lijeka. Opis Lijeka. Opis Lijeka. Opis Lijeka."
+        price="10KM"
+      ></app-item-list>
     </div>
     <div class="card-details card text-white bg-secondary mt-4 shadow-lg"> 
       <form>
