--- a/AngularApp/src/styles.css
+++ b/AngularApp/src/styles.css
@@ -7,12 +7,14 @@
 .btn:active {
     border-color: transparent !important;
 }
-.btn-primary {
+.btn-primary, .btn-danger {
     box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
     font-weight: 500;
     font-size: 16px;
     padding: 6px 30px;
     margin-top: 1px;
+}
+.btn-primary {
     background-color: #3D8AF7;
     border: 1px solid #3D8AF7;
 }
@@ -23,6 +25,23 @@
 .btn-primary:active {
     background-color: #1976D2 !important;
     border: 1px solid #1976D2 !important;
+}
+.btn-secondary {
+    background-color: #fff !important;
+    border: 1px solid #eee !important;
+    color: #000 !important;
+    font-weight: 400;
+    padding: 6px 30px 7px 30px;
+    margin-top: 1px;
+    font-size: 16px;
+}
+.btn-secondary:hover {
+    background-color: #eee !important;
+    border: 1px solid #ddd !important;
+}
+.btn-secondary:active {
+    background-color: #ddd !important;
+    border: 1px solid #ccc !important;
 }
 .btn, .login, .form-control, .form-check-input, .card, .card-img-top, .card-body, .list-group {
     border-radius: 3px;
