Small changes in design

--- a/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
+++ b/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="my-4 main">
+  <div class="my-5 main">
     <div class="items">
       <h4>Vaša korpa</h4>
       <p>Trenutno imate X lijekova za poručiti</p>
@@ -8,6 +8,7 @@
         name="Naziv Lijeka"
         description="Opis Lijeka. Opis Lijeka. Opis Lijeka. Opis Lijeka."
         price="10KM"
+        btnText="Ukloni"
       ></app-item-list>
     </div>
     <div class="card-details card text-white bg-secondary mt-4 shadow-lg"> 
