--- a/AngularApp/src/app/components/item-list/item-list.component.html
+++ b/AngularApp/src/app/components/item-list/item-list.component.html
@@ -10,10 +10,10 @@
             </div>
             <div class="card-column align-items-center justify-content-end">
                 <div>
-                    <h5 class="mb-0 me-3">{{price}}</h5>
+                    <h5 class="mb-0 me-4">{{price}}</h5>
                 </div>
                 <div>
-                    <button class="btn btn-primary">Ukloni</button>
+                    <button class="btn btn-primary">{{btnText}}</button>
                 </div>
             </div>
         </div>
