--- a/AngularApp/src/app/components/navbar/navbar.component.css
+++ b/AngularApp/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,6 @@
+.navbar {
+    padding: 11px 10% 11px 5% !important;
+}
 .navbar-brand {
     font-size: 27px;
     font-weight: 500;
@@ -8,4 +11,10 @@
 }
 .active-link {
     font-weight: 500;
+}
+
+@media (max-width: 1200px) {
+    .navbar {
+        padding: 11px 20px 11px 0 !important;
+    }
 }
