Changed bg colors

--- a/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
+++ b/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
@@ -11,7 +11,7 @@
         btnText="Ukloni"
       ></app-item-list>
     </div>
-    <div class="card-details card text-white bg-secondary mt-4 shadow-lg"> 
+    <div class="card-details card bg-primary mt-4 shadow-lg"> 
       <form>
         <div class="card-body">
           <h5>Detalji narudžbe</h5>
