--- a/AngularApp/src/app/pages/medical-institution/medical-institution-carton/medical-institution-carton.component.html
+++ b/AngularApp/src/app/pages/medical-institution/medical-institution-carton/medical-institution-carton.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     
     <!-- View Medical Records -->
-    <div class="card mt-5">
+    <div class="card mt-5 shadow-sm">
         <div class="card-header">
             <h5>Odaberi Medicinski Karton</h5>
         </div>
@@ -42,7 +42,7 @@
     </div>
     
     <!-- Create New Medical Record -->
-    <div class="card mt-4">
+    <div class="card mt-4 shadow-sm">
         <div class="card-header">
             <h5>Kreiraj Novi Karton</h5>
         </div>
@@ -66,7 +66,7 @@
     </div>
     
     <!-- Edit Medical Record -->
-    <div class="card mt-4">
+    <div class="card mt-4 shadow-sm">
         <div class="card-header">
             <h5>Edituj Medicinski Katron</h5>
         </div>
@@ -90,7 +90,7 @@
     </div>
     
     <!-- Delete Medical Record -->
-    <div class="card my-5">
+    <div class="card my-5 shadow-sm">
         <div class="card-header">
             <h5>Obrisi Medicinski Karton</h5>
         </div>
