--- a/AngularApp/src/app/components/card/card.component.html
+++ b/AngularApp/src/app/components/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="card shadow-sm">
-    <img src="{{img}}" class="card-img-top shadow-sm" alt="Slika apoteke">
+    <img src="{{img}}" class="card-img-top shadow-sm" alt="Slika">
     <div class="card-body shadow-sm">
         <h5 class="card-title">{{title}}</h5>
         <p class="card-text">{{description}}</p>
