Added frontend authorization

--- a/AngularApp/src/app/components/filter/filter.component.html
+++ b/AngularApp/src/app/components/filter/filter.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 mb-4">
+<div class="container my-4">
     <div class="input-result">
         <input type="text" id="input1" class="form-control" placeholder="{{placeholder1}}" (keyup)="getAutoComplete(1)" autocomplete="off">
         <ul id="results1" class="filter-list list-group shadow-sm"></ul>
