--- a/AngularApp/src/app/pages/admin/admin-login/admin-login.component.html
+++ b/AngularApp/src/app/pages/admin/admin-login/admin-login.component.html
@@ -1,5 +1,5 @@
 <div class="login bg-primary shadow">
-    <form #loginForm="ngForm" (submit)="loginAdmin(loginForm.value)">
+    <form #loginForm="ngForm" (submit)="formSubmit(loginForm.value)">
         <h3 class="text-center mt-2">Admin</h3>
         <div class="form-group first-input">
             <label>Korisničko ime:</label>
