--- a/AngularApp/src/app/app.component.html
+++ b/AngularApp/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div [@routerTransition]="prepareRoute(outlet)">
+    <router-outlet #outlet="outlet"></router-outlet>
+</div>
