added endpoints for lijekovi

--- a/AngularApp/src/app/components/item-list/item-list.component.html
+++ b/AngularApp/src/app/components/item-list/item-list.component.html
@@ -2,7 +2,7 @@
     <div class="card-body pt-2">
         <div class="card-align">
             <div class="card-column align-items-center justify-content-start">
-                <img src="./../../../assets/img/no-image-avabliable.jpg" class="card-img">
+                <img src="./../../../assets/img/no-image-avabliable.jpg" class="card-img" alt="Slika">
                 <div class="ms-4">
                     <h5>{{name}}</h5>
                     <p class="small mb-0">{{description}}</p>
@@ -10,10 +10,10 @@
             </div>
             <div class="card-column align-items-center justify-content-end">
                 <div>
-                    <h5 class="mb-0 me-3">{{price}}</h5>
+                    <h5 class="mb-0 me-4">{{price}}</h5>
                 </div>
                 <div>
-                    <button class="btn btn-primary">Ukloni</button>
+                    <button class="btn btn-primary">{{btnText}}</button>
                 </div>
             </div>
         </div>
