--- a/AngularApp/src/app/app.component.html
+++ b/AngularApp/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+
+<div *ngIf="alert.color && alert.message" class="alert alert-{{alert.color}} shadow-sm">{{alert.message}}</div>
+
+<div [@routerTransition]="prepareRoute(outlet)">
+    <router-outlet #outlet="outlet"></router-outlet>
+</div>
