--- a/AngularApp/src/app/pages/admin/admin-login/admin-login.component.html
+++ b/AngularApp/src/app/pages/admin/admin-login/admin-login.component.html
@@ -1,13 +1,13 @@
-<div class="login bg-secondary shadow">
-    <form #loginForm="ngForm" (submit)="loginAdmin(loginForm.value)">
+<div class="login bg-primary shadow">
+    <form #loginForm="ngForm" (submit)="formSubmit(loginForm.value)">
         <h3 class="text-center mt-2">Admin</h3>
         <div class="form-group first-input">
             <label>Korisničko ime:</label>
-            <input type="email" class="form-control" name="korisnickoIme" autocomplete="off" ngModel>
+            <input type="email" class="form-control shadow-sm" name="korisnickoIme" autocomplete="off" ngModel>
         </div>
         <div class="form-group mt-2">
             <label>Šifra:</label>
-            <input type="password" class="form-control" name="lozinka" ngModel>
+            <input type="password" class="form-control shadow-sm" name="lozinka" ngModel>
         </div>
         <button class="btn btn-primary btn-block mt-4">Nastavi</button>
     </form>
