Added edit and delete medicine, and button click handler in ItemListComponent

--- a/AngularApp/src/app/components/item-list/item-list.component.html
+++ b/AngularApp/src/app/components/item-list/item-list.component.html
@@ -13,7 +13,7 @@
                     <h5 class="mb-0 me-4">{{price}}</h5>
                 </div>
                 <div>
-                    <button class="btn btn-primary">{{btnText}}</button>
+                    <button class="btn btn-primary" (click)="btnClickHandler()">{{btnText}}</button>
                 </div>
             </div>
         </div>
