--- a/AngularApp/src/app/app.component.css
+++ b/AngularApp/src/app/app.component.css
@@ -1,8 +1,9 @@
 .alert {
-    position: absolute;
+    position: fixed;
     top: 85px;
     right: 12px;
     width: 325px;
     font-weight: 500;
     text-align: center;
+    z-index: 1;
 }
