--- a/AngularApp/src/app/pages/pharmacy/pharmacy-edit-medicine/pharmacy-edit-medicine.component.html
+++ b/AngularApp/src/app/pages/pharmacy/pharmacy-edit-medicine/pharmacy-edit-medicine.component.html
@@ -6,13 +6,18 @@
                 <input type="file" class="form-control mt-2" name="slijaLijeka" ngModel>
                 <input class="form-control mt-2" placeholder="Naziv lijeka" name="nazivLijeka" [(ngModel)]="res.nazivLijeka" autocomplete="off">
                 <textarea class="form-control mt-2" rows="3" placeholder="Opis lijeka" name="opisLijeka" [(ngModel)]="res.opisLijeka"></textarea>
-                <input type="number" class="form-control mt-2" placeholder="Cijena lijeka">
+                <div class="inline-input-group mt-2">
+                    <label>Cijena Lijeka (KM): </label>
+                    <input type="number" class="form-control inline-input" name="cijenaLijeka" [(ngModel)]="res.cijenaLijeka">
+                    <label>Količina: </label>
+                    <input type="number" class="form-control inline-input" name="kolicina" [(ngModel)]="res.kolicina">
+                </div>
                 <div class="form-check mt-2">
                     <input class="form-check-input" type="checkbox" id="checkbox" name="zahtijevaRecept" [(ngModel)]="res.zahtijevaRecept">
                     <label class="form-check-label" for="checkbox">Zahtijeva recept?</label>
                 </div>
                 <button class="btn btn-primary btn-half-block mt-2">Potvrdi</button>
-                <button type="button" (click)="deleteMedicine()" class="btn btn-danger btn-half-block mt-2">Izbrisi Lijek</button>
+                <button type="button" (click)="showModal = true" class="btn btn-danger btn-half-block mt-2">Izbrisi Lijek</button>
             </form>
         </div>
     </div>
@@ -25,4 +30,9 @@
         src="https://www.google.com/maps/embed/v1/place?key=API_KEY
         &q=Space+Needle,Seattle+WA">
     </iframe>
+    <app-modal
+        *ngIf="showModal"
+        (closeModal)="showModal = false"
+        (onSubmit)="deleteMedicine()"
+    ></app-modal>
 </div>
